--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
-    "@nutui/nutui-react-taro": "^2.0.13",
     "@tarojs/components": "3.5.10",
     "@tarojs/helper": "3.5.10",
     "@tarojs/plugin-framework-react": "3.5.10",
@@ -58,7 +57,8 @@
     "@tarojs/taro-h5": "3.5.10",
     "babel-plugin-import": "^1.13.8",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "taro-ui": "^3.1.0-beta.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -77,6 +77,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "react-refresh": "^0.11.0",
     "stylelint": "^14.4.0",
+    "taro-plugin-tailwind": "^1.3.4",
     "typescript": "^4.1.0",
     "webpack": "5.69.0"
   }
