--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@taroify/core": "^0.1.0-alpha.9",
     "@tarojs/components": "3.5.10",
     "@tarojs/helper": "3.5.10",
     "@tarojs/plugin-framework-react": "3.5.10",
@@ -56,6 +57,7 @@
     "@tarojs/taro": "3.5.10",
     "@tarojs/taro-h5": "3.5.10",
     "babel-plugin-import": "^1.13.8",
+    "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "taro-ui": "^3.1.0-beta.7"
